Contact me page content wrap thirdd fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,7 +72,7 @@ body {
 
 .contents{
     flex: 1;
-    padding: 3rem 0 10rem 0;
+    padding: 3rem 0 8.5rem 0;
   } 
 
 img {
